fix the styling using tailwind, and align the navigation bar to main contents

--- a/src/App.css
+++ b/src/App.css
@@ -54,9 +54,7 @@
 }
 
 .navigation-bar {
-  display: flex;
   padding: 10px 0;
-  background: #497042;
   overflow: hidden;
   position: fixed;
   top: 0;
@@ -66,19 +64,13 @@
 #site-logo {
   width: 80px;
   height: 60px;
-  margin-left: 100px;
   margin-right: auto;
 }
 
 .navigation-bar nav {
-  margin-right: 100px;
   margin-left: auto;
   display: flex;
   align-items: center;
-}
-
-.navigation-bar ul {
-  display: flex;
 }
 
 
@@ -92,10 +84,4 @@
   text-decoration: none;
   color: #fff;
   align-items: center;
-}
-
-.main-content {
-  /* position: fixed;
-  top: 200px; */
-  /* left: 100px; */
 }
